--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <header>
     <h1>GMeS</h1>
     <nav class="nav-header">
-      <a href="#pagina1" class="btnHeaer">Página 1</a>
-      <a href="#pagina2" class="btnHeaer">Página 2</a>
+      <a href="coleccion.html" class="btnHeaer">Colección</a>
+      <a href="#pagina2" class="btnHeaer">Contacto</a>
     </nav>
   </header>
 
   <main>
-    <Section id="seccionMuestraVS">
+   <!-- <Section id="seccionMuestraVS">
       <h1>Proximo Enfrentamiento</h1>
       <h3>fecha</h3>
         <div class="divGeneralMuestraVS">
@@ -28,18 +28,18 @@
           <div class="button-container">
             <button>Ver calendario</button>
           </div>
-    </Section>
-    <Section id="seccionMuestraEqipos">
+    </Section> -->
 
-    </Section>
     <Section id="seccionMuestraTargetas">
         <div class="divTarjetas">
-          <img src="" alt="Imagen no encontrada">
+          <img src="imagenes/visitanos.jpg" alt="Imagen no encontrada">
           <h4>Visita Nuestros Encuentros</h4>
+          <p>Visita nuestros torneos y disfruta de una experiencia unica, siente la emocion y competitividad de los rivales compitiendo.</p>
         </div>
         <div class="divTargetas">
-          <img src="" alt="Imagen no encontrada">
+          <img src="imagenes/UneteANosotros.jpg" alt="Imagen no encontrada">
           <h4>Unete a Nosotos</h4>
+          <p>Unete a nuestro equipo tecnico para preparar las increibles experiencias que proporcionamos durante nuestras concentraciones.</p>
         </div>
     </Section>
   </main>
