--- a/coleccion.html
+++ b/coleccion.html
@@ -53,6 +53,16 @@
                 muestraEquipos.appendChild(div);
             });
         </script>
-    <footer></footer>
+    <footer>        
+    <div class="legal">
+      © 2025 GMES. Todos los derechos reservados. | <a href="#" style="color:#ccc; text-decoration:underline;">Aviso legal</a>
+    </div>
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    </div>
+  </footer>
 </body>
 </html>
