--- a/contacto.html
+++ b/contacto.html
@@ -20,6 +20,7 @@
     label {
       display: block;
       margin-top: 15px;
+      color: w;
     }
     input, textarea {
       width: 100%;
@@ -27,6 +28,8 @@
       margin-top: 5px;
       border-radius: 5px;
       border: 1px solid #000000;
+      color: white;
+       background: #184f1e;
       background-color: linear-gradient(90deg,rgba(24, 79, 30, 1) 10%, rgba(6, 20, 8, 1) 33%, rgba(0, 0, 0, 1) 69%, rgba(24, 79, 30, 1) 94%);
     }
     button {
@@ -48,7 +51,11 @@
 
 <body>
     <header>
-
+<h1>GMeS</h1>
+    <nav class="nav-header">
+      <a href="index.html" class="btnHeaer">Inicio</a>
+      <a href="coleccion.html" class="btnHeaer">Colección</a>
+    </nav>
     </header>
     <main>
         <div class="container">
@@ -68,7 +75,9 @@
         </div>
     </main>
     <footer>
-
+    <div class="legal">
+      © 2025 GMES. Todos los derechos reservados. | <a href="#" style="color:#ccc; text-decoration:underline;">Aviso legal</a>
+    </div>
     </footer>
   
 
