--- a/coleccion.html
+++ b/coleccion.html
@@ -11,7 +11,7 @@
     <h1>GMeS</h1>
     <nav class="nav-header">
       <a href="index.html" class="btnHeaer">Inicio</a>
-      <a href="coleccion.html" class="btnHeaer">Contacto</a>
+      <a href="contacto.html" class="btnHeaer">Contacto</a>
     </nav>
     </header>
 
