--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>GMeS</h1>
     <nav class="nav-header">
       <a href="coleccion.html" class="btnHeaer">Colección</a>
-      <a href="#pagina2" class="btnHeaer">Contacto</a>
+      <a href="contacto.html" class="btnHeaer">Contacto</a>
     </nav>
   </header>
 
