--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             <button>Ver calendario</button>
           </div>
     </Section> -->
+    <section id="fotoCabecera">
+      <div>
+        <img src="imagenes/eSports-comitato-olimpico.jpg" alt="">
+        <div><h2>¿Listo para vivir la adrenalina de los torneos de CS:GO como nunca antes? En nuestra plataforma podrás comprar tus entradas, seguir tus eventos favoritos y asegurar tu lugar en las batallas más épicas del eSport. Ya seas fanático, jugador o equipo, aquí es donde la emoción comienza.
+</h2>
+<a class="btnHeaer" href="coleccion.html">🔥 Tu pase directo a la acción está a solo un clic.</a>
+</div>
+      </div>
+      
+    </section>
 
     <Section id="seccionMuestraTargetas">
         <div class="divTarjetas">
