--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
           <div class="button-container">
             <button>Ver calendario</button>
-          </div>sfdsdf
+          </div>sfdsdfss
     </Section> -->
     <section id="fotoCabecera">
       <div>
